cloudformation/securitygroup.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "awsdevopsdemo - security groups",

    "Parameters" : {
        "VpcId": {
            "Type": "String",
            "Description": "VpcId to create the security groups for ELB, Jenkins, AppSrv instances and RDS"
        }
    },

    "Resources": {

        "ELBSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open port 80 (for ELB)",
                "VpcId": { "Ref": "VpcId" },
                "Tags": [{ "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
                         { "Key": "Name", "Value": { "Ref": "AWS::StackName" } }],
             	"SecurityGroupIngress" : [ {
	                "IpProtocol": "tcp",
	                "FromPort": "80",
	                "ToPort": "80",
	                "CidrIp": "0.0.0.0/0"             		
             	} ],
             	"SecurityGroupEgress" : [ {
	                "IpProtocol": "-1",
	                "CidrIp": "0.0.0.0/0"
             	} ]
            }
        },
    
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open port 8080 (for jenkins and appsrv instances)",
                "VpcId": { "Ref": "VpcId" },
                "Tags": [{ "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
                         { "Key": "Name", "Value": { "Ref": "AWS::StackName" } }],
             	"SecurityGroupIngress" : [ {
	                "IpProtocol": "tcp",
	                "FromPort": "8080",
	                "ToPort": "8080",
	                "CidrIp": "0.0.0.0/0"             		
             	} ],
             	"SecurityGroupEgress" : [ {
	                "IpProtocol": "-1",
	                "CidrIp": "0.0.0.0/0"
             	} ]
            }
        },
    
        "RDSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open port 3306 (for RDS)",
                "VpcId": { "Ref": "VpcId" },
                "Tags": [{ "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
                         { "Key": "Name", "Value": { "Ref": "AWS::StackName" } }],
             	"SecurityGroupIngress" : [ {
	                "IpProtocol": "tcp",
	                "FromPort": "3306",
	                "ToPort": "3306",
	                "SourceSecurityGroupId": { "Ref": "InstanceSecurityGroup"}             		
             	} ],
             	"SecurityGroupEgress" : [ {
	                "IpProtocol": "-1",
	                "CidrIp": "0.0.0.0/0"
             	} ]
            }
        }
    
    },

    "Outputs": {
        "ELBSecurityGroup": {
            "Description": "ELB SecurityGroup",
            "Value": { "Fn::GetAtt": [ "ELBSecurityGroup", "GroupId" ]}
        },
        "InstanceSecurityGroup": {
            "Description": "Instance (jenkins and appsrv) SecurityGroup",
            "Value": { "Fn::GetAtt": [ "InstanceSecurityGroup", "GroupId" ]}
        },
        "RDSSecurityGroup": {
            "Description": "RDS SecurityGroup",
            "Value": { "Fn::GetAtt": [ "RDSSecurityGroup", "GroupId" ]}
        }

    }
}
